layout fixes for mobile, text and card overflow

--- a/src/app/game-board/game-board.component.css
+++ b/src/app/game-board/game-board.component.css
@@ -10,12 +10,15 @@
     display: grid;
     grid-template-rows: max-content 10vh auto max-content;
     grid-template-columns: none;
+    justify-content: center;
 }
 
 @media (max-width: 550px) {
     .lane {
-        grid-template-columns: max-content 15vw auto max-content;
+        grid-template-columns: max-content min-content auto max-content;
         grid-template-rows: none;
         align-items: center;
+
+        justify-content: revert;
     }
 }
